@@ -6,6 +6,8 @@ ver 0.21.14 (not yet released)
 * player
   - fix crash after song change
   - fix seek position after restarting the decoder
+* protocol
+  - include command name in error responses
 
 ver 0.21.13 (2019/08/06)
 * input
